<resources>
    <string name="app_name">friendly</string>
    <string name="etUsername_hint">Email</string>
    <string name="btLogin_text">Log In</string>
    <string name="tvSignup_text">Create new account</string>
    <string name="etFirstName_hint">First Name</string>
    <string name="etLastName_hint">Last Name</string>
    <string name="etEmail_hint">Email</string>
    <string name="etPhoneNumber_hint">Phone Number</string>
    <string name="etPassword_hint">Password</string>
    <string name="etConfirmPassword_hint">Confirm Password</string>
    <string name="btSignup_text">Sign up</string>
    <string name="btFacebookLogin_text">Sign in with Facebook</string>
    <string name="btContinue_text">Continue</string>
    <string name="ivProfilePic_contentDescription">Profile Picture</string>
    <string name="tvChoosePhoto_text">Choose Photo</string>
    <string name="selectImage_toast">Please select an image</string>
    <string name="itLogOut_title">Log out</string>
    <string name="etGroupName_hint">Group Name</string>
    <string name="itLeaveGroup_title">Leave group</string>
    <string name="etMessageBody_hint">Friendly message</string>
    <string name="ivAuthorProfilePic_contentDescription">Author Profile Picture</string>
    <string name="btScrollToBottom_latest_text">Latest Message ↓</string>
    <string name="itArchivedGroups_title">Archived groups</string>
    <string name="activity_new_group_title">Create a New Group</string>
    <string name="activity_archived_chat_titleFormat">Archived: %s</string>
    <string name="invalidGroupLink_toast">Invalid friendly invite</string>
    <string name="itDetails_title">Details</string>
    <string name="ivQR_contentDescription">Invite QR code</string>
    <string name="etFirstName_invalid_toast">First name can\'t be empty</string>
    <string name="etLastName_invalid_toast">Last name can\'t be empty</string>
    <string name="etEmail_invalid_toast">Invalid email</string>
    <string name="etPassword_invalidRegister_toast">Passwords can\'t be empty and must match</string>
    <string name="etUsername_invalid_toast">Username can\'t be empty</string>
    <string name="etPassword_invalidEmpty_toast">Password can\'t be empty</string>
    <string name="etPhoneNumber_invalid_toast">Invalid phone number</string>
    <string name="activity_register_title">Register</string>
    <string name="tvUsers_template">%d people</string>
    <string name="ivLogo_contentDescription">logo</string>
    <string name="or">or</string>
    <string name="ivGroupPic_contentDescription">group icon</string>
    <string name="tvGroupsTitle_text">Recent Chats</string>
</resources>