<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_child" />

    <include
        android:id="@+id/loading"
        layout="@layout/progress_bar_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="personGivenName"
            android:ems="10"
            android:hint="@string/etFirstName_hint"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="personFamilyName"
            android:ems="10"
            android:hint="@string/etLastName_hint"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/etEmail_hint"
            android:inputType="textWebEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etLastName" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="newPassword"
            android:ems="10"
            android:hint="@string/etPassword_hint"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etConfirmPassword_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/btSignup_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clForm" />
</androidx.constraintlayout.widget.ConstraintLayout>