<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewUserActivity">

    <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/ivProfilePic_contentDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".3"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:autofillHints="phone"
        android:ems="10"
        android:hint="@string/etPhoneNumber_hint"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfilePic" />

    <Button
        android:id="@+id/btContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btContinue_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber"
        app:layout_constraintVertical_bias=".2" />
</androidx.constraintlayout.widget.ConstraintLayout>